Changes
-------

0.1.x (xx-xx-2017)
^^^^^^^^^^^^^^^^^^

* Allow to add gc support without implementing PyGCProtocol #57


0.1.0 (07-23-2017)
^^^^^^^^^^^^^^^^^^

* Initial release